syntax = "proto3";

package checkers.checkers;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "checkers/checkers/params.proto";
import "checkers/checkers/system_info.proto";
import "checkers/checkers/stored_game.proto";
import "checkers/checkers/player_info.proto";

option go_package = "github.com/alice/checkers/x/checkers/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/params";
  
  }
  
  // Queries a SystemInfo by index.
  rpc SystemInfo (QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/system_info";
  
  }
  
  // Queries a list of StoredGame items.
  rpc StoredGame    (QueryGetStoredGameRequest) returns (QueryGetStoredGameResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/stored_game/{index}";
  
  }
  rpc StoredGameAll (QueryAllStoredGameRequest) returns (QueryAllStoredGameResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/stored_game";
  
  }
  
  // Queries a list of PlayerInfo items.
  rpc PlayerInfo    (QueryGetPlayerInfoRequest) returns (QueryGetPlayerInfoResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/player_info/{account}";
  
  }
  rpc PlayerInfoAll (QueryAllPlayerInfoRequest) returns (QueryAllPlayerInfoResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/player_info";
  
  }
  
  // Queries a list of PlayerInfoAllWithNotStartedGames items.
  rpc PlayerInfoAllWithNotStartedGames (QueryPlayerInfoAllWithNotStartedGamesRequest) returns (QueryPlayerInfoAllWithNotStartedGamesResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/player_info_all_with_not_started_games";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
  SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}

message QueryGetStoredGameRequest {
  string index = 1;
}

message QueryGetStoredGameResponse {
  StoredGame storedGame = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredGameRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredGameResponse {
  repeated StoredGame                             storedGame = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPlayerInfoRequest {
  string account = 1;
}

message QueryGetPlayerInfoResponse {
  PlayerInfo playerInfo = 1 [(gogoproto.nullable) = false];
}

message QueryAllPlayerInfoRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPlayerInfoResponse {
  repeated PlayerInfo                             playerInfo = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPlayerInfoAllWithNotStartedGamesRequest {}

message QueryPlayerInfoAllWithNotStartedGamesResponse {
  repeated PlayerInfo playerInfoAllWithNotStartedGames = 1 [(gogoproto.nullable) = false];
}

